fix overlap bug when editing

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@ h2, body, p {
 #notes {
   background: #EEE;
 	margin: 0 auto;
-  max-width: 600px;
+  max-width: 620px;
 }
 
 /* clearfix */
